; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dma/extr_dma.c_read_aliases.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dma/extr_dma.c_read_aliases.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@yyin = common dso_local global i32* null, align 8
@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @read_aliases to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_aliases() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 0), align 4
  %3 = call i32* @fopen(i32 %2, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %3, i32** @yyin, align 8
  %4 = load i32*, i32** @yyin, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %0
  %7 = load i64, i64* @errno, align 8
  %8 = load i64, i64* @ENOENT, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %6
  store i32 0, i32* %1, align 4
  br label %19

11:                                               ; preds = %6
  store i32 -1, i32* %1, align 4
  br label %19

12:                                               ; preds = %0
  %13 = call i64 (...) @yyparse()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 -1, i32* %1, align 4
  br label %19

16:                                               ; preds = %12
  %17 = load i32*, i32** @yyin, align 8
  %18 = call i32 @fclose(i32* %17)
  store i32 0, i32* %1, align 4
  br label %19

19:                                               ; preds = %16, %15, %11, %10
  %20 = load i32, i32* %1, align 4
  ret i32 %20
}

declare dso_local i32* @fopen(i32, i8*) #1

declare dso_local i64 @yyparse(...) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
